fixes overflow

--- a/lupo/sass/_media.sass
+++ b/lupo/sass/_media.sass
@@ -22,12 +22,18 @@
 	.widgets
 		margin-top: -30px
 		flex-flow: column nowrap
+		&-box
+			
 		&-1
 			max-width: 520px
 			width: 87%
 			height: 280px
 			iframe
-				max-height: 260px
+				max-height: 260px !important
+				// overflow: scroll
+				width: 100%
+				height: 100%
+				// max-width: 290px
 
 	.info
 		.screenshot
