--- a/lupo/sass/main.sass
+++ b/lupo/sass/main.sass
@@ -150,13 +150,13 @@ body
 			position: relative
 			background: #000
 			padding: 20px
-			width: 91% !important
-			height: 91% !important
+			width: 100% !important
+			height: 100% !important
 			overflow: hidden
 
 	&-2
-		width: 29%
-		min-width: 310px
+		width: 25%
+		min-width: 300px
 		background: url('../img/recuadro1.png') 0 1px / 100% 100%
 		iframe
 			background: #000
